--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,7 @@ span{
 }
 
 .first-about{
-  font-family: Impact, Montserrat, 'Arial Narrow Bold', sans-serif;
+  font-family: Montserrat, 'Arial Narrow Bold', sans-serif;
   color: black;
   font-size: 40px;
   text-align: center;
