--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,7 @@ span{
 }
 
 .element3 {
+  font-family: 'Arial Narrow', sans-serif;
   width: 500px;
   height: 400px;
   border-radius: 10%;
@@ -218,7 +219,7 @@ span{
 }
 
 .first-about{
-  font-family: 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: black;
   font-size: 40px;
   text-align: center;
