--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ span{
 }
 
 .element3 {
-  font-family: 'Arial Narrow', sans-serif;
+  font-family: 'Courier New', monospace;
   width: 500px;
   height: 400px;
   border-radius: 10%;
