--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ span{
   flex-shrink: 0;
 }
 
-.element3 {
+.element3 p {
   font-family: 'Courier New', monospace;
   width: 500px;
   height: 400px;
