--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,11 @@
   background-size: 50% 100%;
 }
 /*# sourceMappingURL=styles.css.map */
-
 body {
   background-color: #000;
   padding: 0;
   margin: 0;
 }
-
 .container {
   width: 80%;
   height: 40px;
@@ -21,7 +19,6 @@ body {
   top: 40px;
   margin: 0 auto;
 }
-
 .navigation-wrapper {
   position: relative;
 }
@@ -45,14 +42,12 @@ body {
     color: white;
 }
  
-
 .navigation-menu ul li {
   list-style: none;
   font-family: impact;
   font-weight: 300;
   color: hsl(0,0%,70%);
 }
-
 .navigation-menu {
   content: '';
   position: fixed;
@@ -74,7 +69,6 @@ body {
   top: 120px;
   width: 400px;
   text-align: right;
-
 }
 .navigation-menu ul li {
   position: relative;
@@ -92,7 +86,6 @@ body {
   transform: skewX(8deg) translate(0,0);
     
 }
-
 .navigation-menu li {
   opacity: 0;
   transform: translate(0, 10px);
@@ -131,16 +124,15 @@ body {
   color: white; 
   margin-right: 500px;
 } 
-
 span{
   font-size: 20px;
   letter-spacing: 2px;
   font-family: impact;
 }
-
 /*------------------*/
 
 .first-face{
+  height: 55vh;
   height: 70vh;
 }
 
@@ -149,19 +141,16 @@ span{
   padding: 100px 0;
   
 }
-
 .sticky-wrapper{
   position: sticky;
   top: 100px;
   width: 100%;
   overflow: hidden;
 }
-
 .element-wrapper{
   position: relative;
   display: flex;
 }
-
 .element {
   width: 500px;
   height: 400px;
@@ -170,7 +159,6 @@ span{
   margin: 0 20px 0 0;
   flex-shrink: 0;
 }
-
 .element2 {
   width: 500px;
   height: 400px;
@@ -179,21 +167,14 @@ span{
   margin: 0 20px 0 0;
   flex-shrink: 0;
 }
-
-.element3 p {
-  font-family: 'Courier New', monospace;
+.element3 {
   width: 500px;
   height: 400px;
+  border-radius: 10%;
   background-color: #FDD7AA;
   margin: 0 20px 0 0;
   flex-shrink: 0;
-  text-align: center;
-  font-size: 30px;
-  color: #000;
-  margin: auto;
-  width: 50%;
 }
-
 .element4 {
   width: 500px;
   height: 400px;
@@ -202,7 +183,6 @@ span{
   margin: 0 20px 0 0;
   flex-shrink: 0;
 }
-
 .about-title{
   margin: auto;
   position: relative;
@@ -213,7 +193,6 @@ span{
   align-items: center;
   margin-bottom: 30px;
 }
-
 .about-title, .about-title-h{
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: #fff;
@@ -221,24 +200,19 @@ span{
   font-weight: 600;
   letter-spacing: 0.1em;
 }
-
 .first-about{
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: black;
   font-size: 40px;
   text-align: center;
-
 }
-
 ::-webkit-scrollbar{
   display: none;
 }
-
 .sfu-link {
   overflow: hidden;
   position: relative;
 }
-
 .sfu-link::before,
 .sfu-link::after {
  content: '';
@@ -263,7 +237,6 @@ span{
   transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
   color: #54b3d6;
 }
-
 .sfu-link:hover::before {
   transform-origin: 0% 50%;
   transform: scaleX(1);
@@ -271,21 +244,17 @@ span{
 .sfu-link:hover::after {
   transform: translate3d(0, 0, 0);
 }
-
 .sfu-link span {
   display: inline-block;
   transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
 }
-
 .sfu-link:hover span {
   transform: translate3d(-200%, 0, 0);
 }
-
 .sfu-link {
   text-decoration: none;
   color: #FFA8A8;
 }
-
 .third-face{
   height: 100vh;
 }
