--- a/styles.css
+++ b/styles.css
@@ -185,3 +185,19 @@ span{
 .third-face{
   height: 100vh;
 }
+
+.line-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+
+}
+
+svg{
+  display: inline-block;
+  height: 100%;
+}
