--- a/styles.css
+++ b/styles.css
@@ -185,3 +185,22 @@ span{
 .third-face{
   height: 100vh;
 }
+
+.second-face{
+  height: 100vh;
+  background-image: linear-gradient(
+    45deg,
+    #ff9a9e 0%,
+    #fad0c4 99%,
+    #fad0c4 100%,
+  );
+  position: relative;
+  overflow: hidden;
+}
+
+.paper-plane{
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 0%;
+}
