--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   background-color: #000;
   padding: 0;
   margin: 0;
+
 }
 .container {
   width: 80%;
@@ -132,7 +133,7 @@ span{
 /*------------------*/
 
 .first-face{
-  height: 55vh;
+  height: 55  vh;
   height: 70vh;
 }
 
@@ -198,6 +199,19 @@ span{
 .paper-plane{
   height: 100px;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 0%;
+}
+
+.about{
+  text-transform: uppercase;
+  font-family: impact;
+  font-size: 60px;
+  letter-spacing: 4px;
+  color: white; 
+  text-align: center;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
