--- a/styles.css
+++ b/styles.css
@@ -291,3 +291,47 @@ body.menu-toggled > .meta-link > span {
   font-family: "Rubik", sans-serif;
   font-weight: 500;
 }
+
+.third-face {
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  font-weight: 300;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+h1 {
+  margin: 10px;
+}
+
+.skillsBox {
+  background-color: white;
+  border: 2px solid #3b3b3b;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
+  transform: translateX(400%);
+  transition: transform 0.4s ease;
+}
+
+.skillsBox:nth-of-type(even) {
+  transform: translateX(-400%);
+}
+
+.skillsBox.show {
+  transform: translateX(0);
+}
+
+.skillsBox h2 {
+  font-size: 22px;
+  font-weight: 400;
+}
