--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,6 @@
+body::-webkit-scrollbar {
+    display: none;
+  }
 body{
     background-color: #000;
 }
@@ -10,13 +13,13 @@ body{
   background-color: #000;
   box-sizing: border-box;
   overflow: hidden;
-  height: 100vh;
+  height: 80vh;
 }
 
 .path {
   fill: none;
   stroke: #f2f2f2;
-  stroke-width: .4;
+  stroke-width: 3px;
 }
 
 .path1 {
@@ -30,12 +33,18 @@ body{
   display: flex;
   justify-content: space-around;
   align-items: center;
-    height: 100vh;
+    height: 80vh;
   background-color: black;
 }
 
 .content2 {
-  background-color: #000;
+    margin-top: 0%;
+    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+      height: 70vh;
+    background-color: black;
 }
 
 .path2 {
@@ -44,16 +53,21 @@ body{
 }
 
 .content2 {
-  background-image: repeating-linear-gradient(0deg, rgba(255,255,255, 0.25), rgba(255,255,255, 0.25) 1px, transparent 1px, transparent 7px);
+  /* background-image: repeating-linear-gradient(0deg, rgba(255,255,255, 0.25), rgba(255,255,255, 0.25) 1px, transparent 1px, transparent 7px); */
     background-size: 2px;
 }
 
 .content3 {
-  background-color: #1a1a1a;
+    position: relative; /* make the container positioned relatively */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 20vh;
+  background-color: black;
 }
 
 .footer {
-  height: 30vh;
+  height: 300vh;
   background-color: #000;
 }
 
@@ -120,5 +134,19 @@ body{
   }
   
   .info1{
-    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 400px;
+    color: white;
+  }
+
+  h1, h2, p{
+    opacity: 0;
+    position: relative;
+    bottom: -40px;
+    transition: all 0.8s ease-out;
+  }
+
+  .show{
+    opacity: 1;
+    bottom: 0;
   }
