--- a/style2.css
+++ b/style2.css
@@ -2,6 +2,8 @@ body::-webkit-scrollbar {
     display: none;
   }
 body{
+    padding: 0;
+    margin: 0;
     background-color: #000;
 }
 .header {
@@ -43,7 +45,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-      height: 70vh;
+    height: 100vh;
     background-color: black;
 }
 
@@ -150,3 +152,112 @@ body{
     opacity: 1;
     bottom: 0;
   }
+
+  .border {
+    height: 6px;
+    border: 0;
+    background-color: #B6FFCE;
+    background-image: -webkit-gradient(linear, left top, right top, from(#B6FFCE), color-stop(25%, #B6FFCE), color-stop(25%, #F6FFA4), color-stop(50%, #F6FFA4), color-stop(50%, #FDD7AA), color-stop(75%, #FDD7AA), color-stop(75%, #FFA8A8), color-stop(100%, #FFA8A8), to(#FFA8A8));
+    background-image: linear-gradient(to right, #B6FFCE, #B6FFCE 25%, #F6FFA4 25%, #F6FFA4 50%, #FDD7AA 50%, #FDD7AA 75%, #FFA8A8 75%, #FFA8A8 100%, #FFA8A8 100%);
+    background-size: 50% 100%;
+  }
+
+
+
+  
+.navigation-wrapper {
+  position: relative;
+}
+.navigation-button {
+  will-change: transform;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  position: fixed;
+  z-index: 3;
+  top: 40px;
+  right: 100px;
+  background: transparent;
+  cursor: pointer;
+}
+.navigation-button .fa {
+  border: 2px solid white;
+  border-radius: 3px;
+  padding: 10px;
+    color: white;
+}
+ 
+.navigation-menu ul li {
+  list-style: none;
+  font-family: impact;
+  font-weight: 300;
+  color: hsl(0,0%,70%);
+}
+.navigation-menu {
+  content: '';
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 50%;
+  background: #FFA8A8;
+  height: 100%;
+  transform: skewX(0deg) translate(100%,0);
+  transform-origin: top right;
+  transition: all .2s ease-in;
+  z-index: 2;
+}
+.navigation-menu ul {
+  transform: skewX(-8deg);
+  transform-origin: top left;
+  position: fixed;
+  right: 120px;
+  top: 120px;
+  width: 400px;
+  text-align: right;
+}
+.navigation-menu ul li {
+  position: relative;
+  z-index: 999;
+  font-size: 32px;
+  color: hsl(0,0%,10%);
+  line-height: 64px;
+}
+.navigation-menu ul li  a {
+  border: none;
+  color: hsl(0,0%,10%);
+  text-decoration: none;
+}
+.navigation-menu.active {
+  transform: skewX(8deg) translate(0,0);
+    
+}
+.navigation-menu li {
+  opacity: 0;
+  transform: translate(0, 10px);
+  transition: all .0s ease-in .3s;
+  
+}
+.navigation-menu.active li {
+  opacity: 1;
+  transform: translate(0,0);
+  transition: all .2s ease-in 0s;
+}
+.navigation-menu.active li:nth-child(1) {
+  transition-delay: .3s;
+}
+.navigation-menu.active li:nth-child(2) {
+  transition-delay: .4s;
+}
+.navigation-menu.active li:nth-child(3) {
+  transition-delay: .5s;
+}
+.navigation-menu.active li:nth-child(4) {
+  transition-delay: .6s;
+}
+.navigation-menu.active li:nth-child(5) {
+  transition-delay: .7s;
+}
+.navigation-menu.active li:nth-child(6) {
+  transition-delay: .8s;
+}
