--- a/style2.css
+++ b/style2.css
@@ -28,6 +28,7 @@ body{
     stroke-width: 3px;
   stroke-dasharray: 6884;
   animation: drawPath1 5s linear;
+  stroke: #FFA8A8;
 }
 
 .content1 {
@@ -41,17 +42,36 @@ body{
 
 .content2 {
     margin-top: 0%;
-    
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 100vh;
+    height: 75vh;
+    background-color: black;
+}
+.content4 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 60vh;
     background-color: black;
 }
 
 .path2 {
     stroke-width: 3px;
-  stroke: white;
+  stroke: #F6FFA4;
+}
+
+.path3 {
+    stroke: #B6FFCE;
+}
+
+.path4{
+    stroke: #FDD7AA;
+}
+
+.path5{
+    stroke-width: 2px;
+    stroke: #F6FFA4;
 }
 
 .content2 {
@@ -69,8 +89,12 @@ body{
 }
 
 .footer {
-  height: 300vh;
+  height: 50vh;
   background-color: #000;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @keyframes drawPath1 {
@@ -142,6 +166,7 @@ body{
   }
 
   h1, h2, p{
+    color: wheat;
     opacity: 0;
     position: relative;
     bottom: -40px;
@@ -162,9 +187,6 @@ body{
     background-size: 50% 100%;
   }
 
-
-
-  
 .navigation-wrapper {
   position: relative;
 }
@@ -261,3 +283,14 @@ body{
 .navigation-menu.active li:nth-child(6) {
   transition-delay: .8s;
 }
+
+.social-links a {
+    color: #FFA8A8;
+    text-decoration: none;
+    font-size: 50px;
+    margin: 0 30px;
+  }
+  
+  .social-links a:hover {
+    color: #ccc;
+  }
