--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 }
 /*# sourceMappingURL=styles.css.map */
 body {
-  background-color: #000;
   padding: 0;
   margin: 0;
 
@@ -19,9 +18,10 @@ body {
   position: relative;
   top: 40px;
   margin: 0 auto;
+  z-index: 4;
 }
 .hero h1{  
-  margin-top: 178px;
+  margin-top: 250px;
   text-transform: uppercase;
   font-family: impact;
   font-size: 60px;
@@ -37,8 +37,9 @@ span{
 /*------------------*/
 
 .first-face{
-  height: 55  vh;
-  height: 70vh;
+  background-color: black;
+  height: 55vh;
+  z-index: 3;
 }
 
 .sfu-link {
@@ -92,59 +93,6 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-.third-face {
-  font-family: "Poppins", sans-serif;
-  display: flex;
-  font-weight: 300;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  overflow-x: hidden;
-}
-
-h1 {
-  color: white;
-  margin: 10px;
-}
-
-.skillsBox {
-  border: 2px solid #3b3b3b;
-  color: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 600px;
-  height: 300px;
-  margin: 10px;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
-  transform: translateX(400%);
-  transition: transform 0.4s ease;
-}
-
-.skillsBox:nth-child(even) {
-  background-color: white;
-}
-
-.skillsBox:nth-child(odd) {
-  background-color: black;
-  color: white;
-}
-
-.skillsBox:nth-of-type(even) {
-  transform: translateX(-400%);
-}
-
-.skillsBox.show {
-  transform: translateX(0);
-}
-
-.skillsBox h2 {
-  font-size: 22px;
-  font-weight: 400;
-}
-
 a{
   text-decoration: none;
   color:white;
@@ -169,7 +117,7 @@ body::-webkit-scrollbar {
   background-color: black;
   position: absolute;
   width: 100%;
-  height:70px;
+  height: 40vh;
   z-index: 3;
 }
 
@@ -203,13 +151,17 @@ body::-webkit-scrollbar {
   /* top:30px; */
   margin-top: 10px;
   transition: max-height .5s ease-out;
-  font-family: 'Space Grotesk';
+  font-family: impact;
+  letter-spacing: 2px;
+  color: white; 
 }
 .header .menu li button{
   background-color: transparent;
   border:none;
   font-size: 22px;
-  font-family: 'Space Grotesk';
+  font-family: impact;
+  letter-spacing: 4px;
+  color: white; 
   margin-right: 10px;
   margin-top: 0;
 }
@@ -294,5 +246,139 @@ body::-webkit-scrollbar {
   }
   .header .menu li button{
     background-color: transparent;
+  }
+}
+
+.second-face{
+  background-color: #000;
+  height: 150%;
+}
+
+.third-face{
+  height: 200vh;
+  background-color: #B6FFCE;
+}
+
+.content1 {
+  position: relative; /* make the container positioned relatively */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 80vh;
+}
+.content2 {
+  margin-top: 0%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 90vh;
+  background-color: black;
+}
+
+.content3 {
+  position: relative; /* make the container positioned relatively */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 20vh;
+background-color: black;
+}
+
+.content4 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 60vh;
+  background-color: black;
+}
+
+.path {
+  fill: none;
+  stroke: #f2f2f2;
+  stroke-width: 3px;
+}
+
+.path2 {
+  stroke-width: 3px;
+stroke: #F6FFA4;
+}
+
+.path3 {
+  stroke: #B6FFCE;
+}
+
+.path4{
+    stroke: #FDD7AA;
+}
+
+.path5{
+  stroke-width: 2px;
+  stroke: #F6FFA4;
+}
+
+.info1{
+  font-family: Arial, Helvetica, sans-serif;
+  max-width: 400px;
+  color: white;
+}
+
+.H1, .H2, .P{
+  color: wheat;
+  opacity: 0;
+  position: relative;
+  bottom: -40px;
+  transition: all 0.8s ease-out;
+}
+
+.show{
+  opacity: 1;
+  bottom: 0;
+}
+
+
+.scroll-down {
+  height: 50px;
+  width: 30px;
+  border: 2px solid white;
+  position: absolute;
+  left: 50%;
+  bottom: 50px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.scroll-down::before,
+.scroll-down::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  height: 10px;
+  width: 10px;
+  transform: translate(-50%, -100%) rotate(45deg);
+  border: 2px solid white;
+  border-top: transparent;
+  border-left: transparent;
+  animation: scroll-down 1s ease-in-out infinite;
+}
+.scroll-down::before {
+  top: 30%;
+  animation-delay: 0.3s;
+  /* animation: scroll-down 1s ease-in-out infinite; */
+}
+
+@keyframes scroll-down {
+  0% {
+    /* top:20%; */
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    opacity: 0;
   }
 }
