--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,14 @@ background-color: black;
   background-color: black;
 }
 
+.content5{
+  position: relative; /* make the container positioned relatively */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 80vh;
+}
+
 .path {
   fill: none;
   stroke: #f2f2f2;
@@ -316,13 +324,19 @@ stroke: #F6FFA4;
   stroke: #F6FFA4;
 }
 
+.path6{
+  stroke-width: 2px;
+  stroke: #FDD7AA;
+}
+
 .info1{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Tisa Sans Pro', sans-serif;
+  letter-spacing: 1px;
   max-width: 400px;
   color: white;
 }
 
-.H1, .H2, .P{
+.P{
   color: wheat;
   opacity: 0;
   position: relative;
